@@ -1,5 +1,12 @@
 2009-07-27  Raphael 'kena' Poss  <r.c.poss@uva.nl>
 
+	Introduce new tool `cm4'.
+	
+	* tools/bin/cm4.in: New.
+	* tools/bin/Makefile.am: Update accordingly.
+
+2009-07-27  Raphael 'kena' Poss  <r.c.poss@uva.nl>
+
 	Use more bashisms to reduce the number of sub-processes spawned by
 	tools.
 
